# snarky

./: .envrc  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  DECOUPLE-FROM-MINA.md  FOLLOW-UPS.md  Makefile  POSEIDON_IMPLEMENTATION_NOTES.md  PRESENTATION.md  README.md  STEP_MAIN_AGENTIC_LOOP.md  WRAP_MAIN_AGENTIC_LOOP.md  foo.txt  monad-refactor.md  package-lock.json  package.json  pickles-inventory.js  prompt.txt  rust-toolchain.toml  spago.yaml  workspace-deps.js
.github/workflows/: deploy-visualizer.yml  lean.yml  test.yml
.omc/state/: agent-replay-b2cb8d04-98aa-46b2-b891-b02bb458e02d.jsonl
analysis/: pickles-inventory.md  pickles-tiering-proposed.md
bench/: README.md
bench/harness/: index.d.ts  index.js  package.json
bench/o1js/: package-lock.json  package.json
docs/: chunking-ffi-audit.md  chunking.md  circuit-diff-convergence-loop.md  cross-field-analysis.md  finalize-other-proof-subcircuits.md  finalize-other-proof-test-plan.md  hash-messages-for-next-step-proof.md  incrementally-verify-proof-plan.md  kimchi-circuit-mapping.md  p2p-pool-plan.md  pickles-compile-prover-api-plan.md  pickles-dev-prompt.md  pickles-diagrams-index.md  pickles-next-steps.md  sideload-child-cs-loop-handoff.md  sideload-vk-module-refactor.md  sideload-witness-loop-handoff.md  sideload-witness-m9-iter1-handoff.md  srs-cache-lazy-plan.md  srs-sharing-plan.md  step-circuit-implementation.md  step-vs-wrap-verifier.md  step-wrap-prover-port-plan.md  type2-shifted-value-discrepancy.md  wrap-main-advice-plan.md
formal/: .gitignore  Blueprint.lean  CLAUDE.md  CheckCoreFn.lean  CheckReconstruction.lean  Kimchi.lean  Main.lean  Snarky.lean  lake-manifest.json  lakefile.toml  roots.txt
formal/Kimchi/: Circuit.lean  ConstraintSystem.lean  CoreFn.lean  Curve.lean  Elab.lean  Json.lean  Ladder.lean  Pasta.lean  Shifted.lean
formal/Snarky/: AsProver.lean  CVar.lean  DSL.lean  Monad.lean  Prover.lean  Types.lean  Vec.lean
formal/blueprint/: .gitignore
formal/bulletproof-pcs/: Bulletproof.lean  BulletproofFixture.lean  lake-manifest.json  lakefile.toml  roots.txt
formal/docs/: architecture.md  breadth-plan.md  chunking-plan.md  composition-followups.md  cycle-formalization.md  kimchi-reorg.md  module-deps.dot  protocol-wire-split.md  standard-model-line.md  subcircuit-direction.md  varbasemul-soundness-analysis.md  w4-oracle-game-scope.md
formal/fixtures/: add_complete_step.json  endo_combine_step.json  endomul_step.json  endoscalar_step.json  fiat_shamir_step.json  fq_sponge_pallas_vectors.json  fq_sponge_vectors.json  ipa_batch_pallas.json  ipa_batch_vesta.json  ipa_chunked2_vesta.json  ipa_chunked3_pallas.json  ipa_chunked_batch_pallas.json  ipa_chunked_batch_vesta.json  ipa_chunked_pallas.json  ipa_chunked_ragged_pallas.json  ipa_chunked_vesta.json  ipa_final_check_step.json  ipa_opening_pallas.json  ipa_opening_vesta.json  kimchi_proof_vesta.json  linearization_vesta.json  msm2_step.json  mul_copy_demo.json  poseidon_fp_vectors.json  poseidon_step.json  scale_combine_step.json  varbasemul_step.json
formal/kimchi/: Kimchi.lean  KimchiFixture.lean  lake-manifest.json  lakefile.toml  roots.txt
formal/pasta/: Pasta.lean  lake-manifest.json  lakefile.toml  roots.txt
formal/poseidon/: FixtureKit.lean  Poseidon.lean  lake-manifest.json  lakefile.toml  roots.txt
formal/scripts/: blueprint.css  check-style.sh  check_axioms.lean  check_axioms.sh  check_chunked_fixture.lean  check_chunked_fixture.sh  check_fq_sponge.lean  check_fq_sponge.sh  check_index_fixture.lean  check_index_fixture.sh  check_ipa_fixture.lean  check_ipa_fixture.sh  check_kimchi_verifier.lean  check_kimchi_verifier.sh  check_linearization.lean  check_linearization.sh  check_perm_fixture.lean  check_ps_witness.lean  check_snarky_index.lean  check_snarky_index.sh  check_sponge_vectors.lean  check_sponge_vectors.sh  check_vk_correspond.lean  check_vk_correspond.sh  deadcode.lean  deadcode.sh  kernel-replay.sh  lint.lean  lint.sh  module-deps.sh  nolints.json  noshake.json  prune-stale-oleans.sh  (+1 more)
o1js-bench/: README.md  package-lock.json  package.json
prompts/: ocaml_to_purescript_circuit_translator.md  ocaml_to_purescript_translation_prompt.md  pickles_implementation_plan.md  purescript_language_reference.md
prover/groth16/: Cargo.toml
scripts/: fetch-srs.sh  fixtures.sh
tools/: app_circuit_chunks2_witness_diff.sh  ast_explore.py  bench.sh  bench_matrix.mjs  bench_matrix.sh  bench_o1js.sh  bench_ocaml.sh  bench_summary.mjs  bench_table.mjs  chunks2_witness_diff.sh  chunks4_witness_diff.sh  circuit-diff-summary.mjs  circuit-r1cs-diff.mjs  circuit-wire-diff.mjs  cs_label_diff.py  dead-code.mjs  extract_binds.py  extract_poseidon_params.py  merlin_query.sh  merlin_type.sh  no_recursion_return_trace_diff.sh  no_recursion_return_witness_diff.sh  nrr_witness_diff.sh  p2p_mesh_test.mjs  p2p_pool_test.mjs  p2p_pool_webrtc_test.mjs  p2p_self_worker_test.mjs  regen-fixtures.sh  regen_chunks_fixtures.sh  regen_top_level_fixtures.sh  run_p2p_merge_peer.sh  run_p2p_pool.sh  run_simulation.sh  run_simulation_p2p.sh  run_simulation_private.sh  run_simulation_wasm.sh  run_simulation_web.sh  sideload_witness_diff.sh  simple_chain_trace_diff.sh  simple_chain_witness_diff.sh  (+6 more)
tools/fixture-dump/: Cargo.toml  README.md
tools/fixture-dump/src/: lib.rs
(+352 files in other folders)
