[workspace]
resolver = "2"

members = [
    "packages/crypto-provider",
]

[workspace.dependencies]
# arkworks (minimal for bn254/groth16 support only)
ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-bn254 = "0.5.0"
ark-std = "0.5.0"
ark-groth16 = "0.5.0"
ark-r1cs-std = "0.5.0"
ark-relations = "0.5.0"
ark-serialize = "0.5.0"
ark-snark = "0.5.0"
rand = { version = "0.8", features = ["std_rng"] }
rand_chacha = "0.3"
num-bigint = "0.4.4"
num-integer = "0.1"
napi = { version = "3.4.0", features = ["napi6"] }
napi-derive = "3.3.0"
napi-build = "2.2.4"
bulletproofs = { git = "https://github.com/l-adic/bulletproofs" , rev = "8267344186b388129187f5c78e1a2ced8a4fb30a" }
spongefish = {git = "https://github.com/arkworks-rs/spongefish" , rev = "cda8c90", features = ["derive", "ark-ff", "ark-ec"] }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.0"

kimchi = { git = "https://github.com/o1-labs/proof-systems", rev = "1f5dc49" }
mina-curves = { git = "https://github.com/o1-labs/proof-systems", rev = "1f5dc49" }
mina-poseidon = { git = "https://github.com/o1-labs/proof-systems", rev = "1f5dc49" }
poly-commitment = { git = "https://github.com/o1-labs/proof-systems", rev = "1f5dc49" }

[workspace.dependencies.proptest]
version = "1.0"

[profile.release]
opt-level = "s"
lto = true
