[workspace]
resolver = "2"

members = [
    "packages/pickles-codegen/rust",
]

exclude = [
    "mina",
]

[workspace.dependencies]
# arkworks (used by Pasta field BigInt conversion + kimchi)
ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-std = "0.5.0"
ark-serialize = "0.5.0"
ark-poly = "0.5.0"
rand = { version = "0.8", features = ["std_rng"] }
rand_chacha = "0.3"
num-bigint = "0.4.4"
num-integer = "0.1"
hex = "0.4"
napi = { version = "3.4.0", features = ["napi6"] }
napi-derive = "3.3.0"
napi-build = "2.2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.0"

kimchi = { path = "mina/src/lib/crypto/proof-systems/kimchi" }
mina-curves = { path = "mina/src/lib/crypto/proof-systems/curves" }
mina-poseidon = { path = "mina/src/lib/crypto/proof-systems/poseidon" }
poly-commitment = { path = "mina/src/lib/crypto/proof-systems/poly-commitment" }

[profile.release]
opt-level = "s"
lto = true
