[package]
name = "groth16"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-pallas = { workspace = true }
ark-vesta = { workspace = true }
ark-bn254 = { workspace = true }
ark-std = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }